# mocap_optitrack

./: CMakeLists.txt  package.xml
src/: mocap_datapackets.cpp
